--- a/scss/_infogral.scss
+++ b/scss/_infogral.scss
@@ -4,7 +4,7 @@
 
 .categoriasig{
   text-align: right;
-  height: 500px;
+  height: auto;
   display: grid;
   grid-template-areas: 
   "australia eeuu noruega";
